2011-05-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aacR5Classes.R: changed class of function to ANY, not function
	so that proto objects will work. (Thanks Yvonnick and Gabor)

2011-05-03  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggrid.R: fixed bug with svalue<- method

	* R/aacR5Classes.R: argument checked added to block_ovserver for R5 widgets

2011-04-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aacR5Classes.R: removed sapply with lapply calls. Changes in
	2.13 to sapply (actually call to simplify2array) cause
	issues. (Thanks Stephanie)

2011-03-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggrid.R: svalue<- will scroll to selected value

2011-01-26  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gstatusbar.R: added our own label to work around size issues
	with newer gtk

2011-01-21  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R (.setCompletion): check for NULL value to svalue<-
	(threw RGtk2 warning) (Thanks Hana)

	* R/gradio.R: Replaced this and gcheckboxgroup with a new design
	using a backend Reference class. The code is much cleaner, but I
	still get instability running under gctorture.

2011-01-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggraphicsnotebook.R: quieted down warnings about partial
	argument matching.

2011-01-17  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R (.svalue<-): fix to svalue and init_msg

2011-01-10  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdroplist.R (.as.gWidgetsRGtk2.gdroplist): [<- remembers where
	it is (if possible) when we replace objects

2011-01-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggrid.R: added columnWidths option to size<- method. Pass in
	size value as list with this component

2011-01-04  john verzani  <verzani@john-verzanis-macbook-pro.local>
